--- a/1/index.html
+++ b/1/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <img src="ping.png" alt="ping">
+    <img src="nslookupkubsu.png" alt="nskubsu">
+    <img src="nslookupkubsudev.png" alt="nskubsudev">
+    
 </body>
 </html>
