--- a/1/index.html
+++ b/1/index.html
@@ -9,6 +9,6 @@
     <img src="ping.png" alt="ping">
     <img src="nslookupkubsu.png" alt="nskubsu">
     <img src="nslookupkubsudev.png" alt="nskubsudev">
-    
+    <img src="filezila.png" alt="filezila">
 </body>
 </html>
