--- a/3/index.html
+++ b/3/index.html
@@ -5,58 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Задание 3</title>
      <form action="form.php" method="post">
-     <style>
-         body {
-             font-family: Arial, sans-serif;
-             background-color: #f4f4f4;
-             display: flex;
-             justify-content: center;
-             align-items: center;
-             height: 100vh;
-             margin:100px;
-         }
-         .form-container {
-             background: white;
-             padding: 20px;
-             border-radius: 10px;
-             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-             width: 400px;
-             margin: 40px 0;
-         }
-         .form-group {
-             margin-bottom: 15px;
-         }
-         label {
-             font-weight: bold;
-             display: block;
-             margin-bottom: 5px;
-         }
-         input, select, textarea {
-             width: 100%;
-             padding: 8px;
-             margin-top: 5px;
-             border: 1px solid #ccc;
-             border-radius: 5px;
-         }
-         .radio-group, .checkbox-group {
-             display: flex;
-             align-items: center;
-             gap: 10px;
-         }
-         button {
-             background: #6c757d;
-             color: white;
-             border: none;
-             padding: 10px;
-             width: 100%;
-             border-radius: 5px;
-             cursor: pointer;
-             font-size: 16px;
-         }
-         button:hover {
-             background: #5a6268;
-         }
-     </style>
+     <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
      <div class="form-container">
